Refactor directory structure

--- a/assets/popup.html
+++ b/assets/popup.html
@@ -10,7 +10,7 @@
   <body>
     <section class="is-hidden" id="alert">
       <p class="title">The Home Assistant extension in not configured</p>
-      <p class="subtitle">Right click on the icon, then click on "Options"</p>
+      <p class="subtitle"><a href="/options.html" target="_blank">Open options</a></p>
     </section>
   </body>
 </html>
