Popup Component extraction

--- a/assets/popup.html
+++ b/assets/popup.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home Assistant</title>
-    <link rel="stylesheet" href="popup.css" />
-    <script src="popup.js"></script>
+      <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <section class="is-hidden" id="alert">
-      <p class="title">The Home Assistant extension in not configured</p>
-      <p class="subtitle"><a href="/options.html" target="_blank">Open options</a></p>
-    </section>
+  <div id="popup"></div>
+  <script src="popup.js"></script>
   </body>
 </html>
